--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,13 +8,12 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = ">=3.8, <4"
 temporalio = "^1.1.0"
-requests = "^2.28.2"
 pandas = "^2.0.1"
+aiohttp = "^3.8.4"
 
 [tool.poetry.dev-dependencies]
 black = "^22.3.0"
 isort = "^5.10.1"
-mypy = "^0.961"
 
 [build-system]
 requires = ["poetry-core"]
